Web page with map - part 2

--- a/src/main/resources/web/index-template.html
+++ b/src/main/resources/web/index-template.html
@@ -34,7 +34,7 @@
         var marker = new google.maps.Marker({
             position: {lat: 50.077024, lng: 19.905081},
             map: map,
-            icon: 'img/marker2.png',
+            icon: 'img/home.png',
             animation: google.maps.Animation.DROP,
             title: 'Hello World!'
         });
